--- a/style.css
+++ b/style.css
@@ -280,4 +280,8 @@ header {
         border-bottom: 1px solid #FEDCBA;
         padding-bottom: .5em;
     }
+    
+    #tab-nav-1:checked~.tabs>div:nth-of-type(1) {
+        padding-top: 75px;
+    }
 }
