--- a/style.css
+++ b/style.css
@@ -294,3 +294,347 @@ main {
         padding-top: 75px;
     }
 }
+
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container {
+    max-width: 1060px;
+    float: left;
+}
+
+.container_mini {
+    width: 750px;
+    background-color: white;
+    margin-bottom: 30px;
+    height: 120px;
+    margin-right: 310px;
+    border-radius: 25px;
+}
+
+.row:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.column_r {
+    background-color: white;
+    box-shadow: 0 0 5px 2px;
+    border-radius: 25px;
+}
+
+.column {
+    height: 180px;
+    width: 330px;
+    margin-right: 20px;
+    float: left;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.column:last-child {
+    margin-right: 0px;
+}
+
+/*//////////
+    Инфо 
+//////////*/
+
+
+.info_about_company {
+    background-image: url(../img/background-info.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 73vh;
+}
+
+.info_title {
+    text-align: center;
+    font-size: 46px;
+    font-weight: 300;
+    margin-bottom: 25px;
+}
+
+.info_container {
+    width: 600px;
+    font-size: 20px;
+    font-weight: 300;
+    float: left;
+    margin-top: 15px;
+    padding-left: 10px; 
+}
+
+.info_container_img {
+    float: left; 
+    background-color: #d6d6d6;
+    margin-top: -20px;
+    width: 130px;
+    height: 130px;
+    border-radius: 25px;
+}
+
+.info_container_img_left {
+    margin-left: 10px;
+}
+
+.info_img {
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
+.info_img_text {
+    text-align: center;
+    font-weight: 500;
+    font-size: 18px
+}
+
+/*//////////
+   Отзывы 
+//////////*/
+
+.responses {
+    height: 500px;
+}
+
+.response_container {
+    background-color: white;
+    box-shadow: 0 0 5px 2px;
+    border-radius: 25px;
+    
+    height: 270px;
+    width: 700px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 70px;
+}
+
+.responses_title {
+    font-weight: 300;
+    width: 900px;
+    margin: 0 auto;
+    border-bottom: 2px solid #000;
+    font-size: 46px;
+    text-align: center;
+    line-height: 2;
+}
+
+.responses_title_bottom {
+    font-weight: 300;
+    margin-left: -720px;
+    margin-bottom: 40px;
+}
+
+.response_item_name {
+    font-weight: 300;
+    text-align: center;
+    font-size: 30px;
+    line-height: normal;
+    margin-bottom: 10px;
+    padding-top: 10px;
+}
+
+.response_item_text {
+    font-weight: 300;
+    text-align: center;
+    font-size: 22px;
+    line-height: 1.5;
+}
+
+/*//////////
+   Слайдер
+//////////*/
+
+.wrapper {
+	height: 350px;
+}
+
+.wrapper > input {
+	display: none;
+}
+
+.slider {
+	height: inherit;
+	position: relative;
+    width: inherit;
+}
+
+.controls {
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+
+.wrapper label {
+	cursor: pointer;
+	display: inline-block;
+	height: 8px;
+	margin: 25px 12px 0 16px;
+	position: relative;
+	width: 8px;
+}
+
+.wrapper label:after {
+	border: 2px solid #2F2F30;
+	content: "";
+	display: block;
+	height: 12px;
+	left: -4px;
+	position: absolute;
+	top: -4px;
+	width: 12px;
+	border-radius: 50%;
+}
+
+.wrapper label {
+	cursor: pointer;
+	display: inline-block;
+	height: 8px;
+	margin: 25px 12px 0 16px;
+	position: relative;
+	width: 8px;
+	border-radius: 50%;
+	transition: background ease-in-out .5s;
+}
+
+.wrapper label:hover, 
+#slide1:checked ~ .controls label:nth-of-type(1),
+#slide2:checked ~ .controls label:nth-of-type(2),
+#slide3:checked ~ .controls label:nth-of-type(3),
+#slide4:checked ~ .controls label:nth-of-type(4),
+#slide5:checked ~ .controls label:nth-of-type(5) {
+	background: #2F2F30;
+}
+
+.slides {
+	height: inherit;
+	opacity: 0;
+	position: absolute;
+	width: inherit;
+	z-index: 0;
+	transform: scale(1.5);
+	transition: transform ease-in-out .5s, opacity ease-in-out .5s;
+}
+
+#slide1:checked ~ .slider > .slide1,
+#slide2:checked ~ .slider > .slide2,
+#slide3:checked ~ .slider > .slide3,
+#slide4:checked ~ .slider > .slide4,
+#slide5:checked ~ .slider > .slide5 {
+	opacity: 1;
+	z-index: 1;
+	transform: scale(1);
+}
+
+/*//////////
+   Подвал 
+//////////*/
+
+
+footer {
+    width: 100%;
+    height: 30vh;
+    background-color: #2F2F30;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.company_name {
+    font-size: 50px;
+    font-weight: 300;
+}
+
+.company_name_text {
+    font-size: 21px;
+    font-weight: 300;
+}
+
+.contacts {
+    font-size: 32px;
+    font-weight: 300;
+}
+
+.img {
+    float: left;
+}
+
+.contacts_text {
+    font-size: 21px;
+    font-weight: 300;
+    margin-left: 10px;
+    margin-top: 15px;
+}
+
+.icon_product {
+    margin-top: 20px;
+    margin-right: 16px;
+}
+
+.icon_product:last-child {
+    margin-right: 0px;
+}
+
+
+
+@media screen and (max-width: 1090px) {
+    .info_about_company {
+        height: 900px;
+    }
+    
+    .container_mini {
+        width: 500px;
+        height: 170px;
+        margin-right: 0px;
+    }
+    
+    .info_container {
+        width: 350px;
+        margin-top: 20px
+    }
+    
+    .responses_title {
+        width: 500px;
+    }
+    
+    .responses_title_bottom {
+        margin-left: 0px;
+    }
+    
+    .container {
+        max-width: none;
+    }
+    
+    .column {
+        float: none;
+        margin-bottom: 20px;
+        margin-right: 0px;
+    }
+    
+    .column:last-child {
+        margin-bottom: 0px;
+    }
+    
+    footer {
+        height: 600px;
+        text-align: center;
+    }
+    
+    .company_name {
+        margin-top: 20px;
+    }
+    
+    .company_name_text {
+        margin-top: 20px;
+    }
+    .contacts_text {
+        margin-left: 30px;
+    }
+}
