--- a/src/client/style.css
+++ b/src/client/style.css
@@ -360,6 +360,12 @@ main {
     background-color: #2764F4;
     font-size: 18px;
     color: #FFFFFF;
+    cursor: pointer;
+}
+
+.addPurchase:hover {
+    background-color: #0f54f5;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.42);
 }
 
 /*//////////
@@ -373,7 +379,7 @@ main {
 }
 
 .feedback_form {
-    width: 50%;
+    width: 40%;
     font-weight: 200;
     margin-top: 30px;
     min-width: 350px;
@@ -462,6 +468,12 @@ textarea[type="text"]::placeholder {
     background-color: #2764F4;
     font-size: 20px;
     color: #FFFFFF;
+    cursor: pointer;
+}
+
+.button-submit:hover {
+    background-color: #0f54f5;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.42);
 }
 
 .radio-button:disabled:before {
@@ -482,12 +494,101 @@ textarea[type="text"]::placeholder {
     margin-left: 10px;
 }
 
+/*///////////////
+     Коризна
+///////////////*/
+
 .basket_contents {
-    width: 50%;
+    width: 60%;
     font-weight: 200;
     margin-top: 30px;
-    padding-left: 60px;
+    padding-left: 30px;
     min-width: 350px;
+    border-left: 2px dashed black;
+}
+
+.list_of_products {
+    font-size: 30px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+    margin-top: 15px;
+}
+
+td {
+    padding: 15px;
+    border-bottom: 3px solid #d4d4d4;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+th {
+    padding: 10px;
+    font-weight: 300;
+    font-size: 16px;
+    border-bottom: 3px solid grey;
+    background-color: #F1EFEF;
+}
+
+.button {
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.plus {
+    background-image: url(https://github.com/bmstu-iu9/utp2020-2-shop/raw/master/img/icons/button_plus-icon.png);
+    height: 20px;
+    width: 20px;
+    margin-left: 15px;
+}
+
+.minus {
+    background-image: url(https://github.com/bmstu-iu9/utp2020-2-shop/raw/master/img/icons/button_minus-icon.png);
+    height: 20px;
+    width: 20px;
+    margin-right: 15px;
+}
+
+.delete {
+    background-image: url(https://github.com/bmstu-iu9/utp2020-2-shop/raw/master/img/icons/delete_all-icon.png);
+    height: 40px;
+    width: 30px;
+}
+
+.total {
+    text-align: right;
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: 300;
+    width: 50%;
+    float: right;
+}
+
+.total_num {
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.clean_cart {
+    margin-top: 20px;
+    background-color: #54b8ff;
+}
+
+.clean_cart:hover {
+    background-color: #30a9ff;
+}
+
+.empty_cart {
+    font-size: 25px;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 150px;
 }
 
 /*///////////////*/
