--- a/src/client/style.css
+++ b/src/client/style.css
@@ -534,7 +534,7 @@ th {
     background-color: #F1EFEF;
 }
 
-.button {
+.cart_button {
     background-color: white;
     border: none;
     cursor: pointer;
@@ -542,21 +542,21 @@ th {
     background-position: center;
 }
 
-.plus {
+.button_plus {
     background-image: url(img/icons/button_plus-icon.png);
     height: 20px;
     width: 20px;
     margin-left: 15px;
 }
 
-.minus {
+.button_minus {
     background-image: url(img/icons/button_minus-icon.png);
     height: 20px;
     width: 20px;
     margin-right: 15px;
 }
 
-.delete {
+.button_delete {
     background-image: url(img/icons/delete_all-icon.png);
     height: 40px;
     width: 30px;
