--- a/src/client/style.css
+++ b/src/client/style.css
@@ -207,6 +207,7 @@ main {
 .tab-nav-1-container,
 .tab-nav-2-container,
 .tab-nav-3-container,
+.tab-nav-5-container,
 .tab-nav-4-container {
     width: 264px;
     height: 64px;
@@ -264,7 +265,8 @@ main {
 #tab-nav-1:checked~.tabs>div:nth-of-type(1),
 #tab-nav-2:checked~.tabs>div:nth-of-type(2),
 #tab-nav-3:checked~.tabs>div:nth-of-type(3),
-#tab-nav-4:checked~.tabs>div:nth-of-type(4) {
+#tab-nav-4:checked~.tabs>div:nth-of-type(4),
+#tab-nav-5:checked~.tabs>div:nth-of-type(5) {
     transform: rotateX(0deg);
     opacity: 1;
     z-index: 1;
@@ -663,7 +665,7 @@ th {
 	animation-duration: 0.4s;
 	animation-timing-function: ease-out;
 }
- 
+
 @keyframes fadeIn {
 	from {opacity: 0; visibility: hidden;}
 	to {opacity:1; visibility: visible;}
@@ -674,7 +676,7 @@ th {
 	opacity: 1;
 	visibility: visible;
 }
- 
+
 @keyframes fadeOut {
 	from {opacity: 1; visibility: visible;}
 	to {opacity:0; visibility: hidden;}
