--- a/src/client/style.css
+++ b/src/client/style.css
@@ -180,13 +180,12 @@ header {
 
 main {
     width: 100%;
-    height: 5100px;
+    height: auto;
     background-color: #FFFFFF;
 }
 
 .main__nav {
     width: 100%;
-    height: 64px;
     background-color: #2F2F30;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-top: 1px solid #FFFFFF;
